peac_dev/force-app/main/default/objects/Resubmission_to_Credit_Details__c/Resubmission_to_Credit_Details__c.object-meta.xml
<CustomObject>
    <label>Resubmission to Credit Details</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Resubmission to Credit Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resubmission to Credit Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>