peac_dev/force-app/main/default/objects/Resubmission_to_Credit_Details__c/fields/Appeal_Comments__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Appeal Comments</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>