peac_dev/force-app/main/default/objects/Resubmission_to_Credit_Details__c/fields/Appeal_Information_Provided__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Information_Provided__c</fullName>
    <label>Appeal Information Provided</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Additional Bank Reference</fullName>
            </value>
            <value>
                <fullName>Additional Business Info/CCG</fullName>
            </value>
            <value>
                <fullName>Additional Equipment Info</fullName>
            </value>
            <value>
                <fullName>Additional Principal/Ownership Info</fullName>
            </value>
            <value>
                <fullName>Additional Vendor/Broker Info</fullName>
            </value>
            <value>
                <fullName>Financial Statements</fullName>
            </value>
            <value>
                <fullName>Original Credit Data</fullName>
            </value>
            <value>
                <fullName>Scored Incorrectly</fullName>
            </value>
            <value>
                <fullName>Corrected Business Information</fullName>
            </value>
            <value>
                <fullName>Additional Ownership Information</fullName>
            </value>
            <value>
                <fullName>Additional Bank Information</fullName>
            </value>
            <value>
                <fullName>Location Information</fullName>
            </value>
            <value>
                <fullName>Industry Information</fullName>
            </value>
            <value>
                <fullName>Competitor Balance Information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>