peac_dev/force-app/main/default/objects/Resubmission_to_Credit_Details__c/fields/Appeal_Type__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Type__c</fullName>
    <label>Appeal Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st</fullName>
            </value>
            <value>
                <fullName>2nd</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>