peac_dev/force-app/main/default/objects/Resubmission_to_Credit_Details__c/fields/Assigned_Credit_User__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Credit_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Credit User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Resubmission_to_Credit_Details3</relationshipName>
    <type>Lookup</type>
</CustomField>