peac_dev/force-app/main/default/objects/Resubmission_to_Credit_Details__c/fields/Decision_By__c.field-meta.xml
<CustomField>
    <fullName>Decision_By__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Decision By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>