peac_dev/force-app/main/default/objects/Resubmission_to_Credit_Details__c/fields/Decisioned_By__c.field-meta.xml
<CustomField>
    <fullName>Decisioned_By__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Originally Decisioned By</label>
    <length>225</length>
    <type>Text</type>
</CustomField>