peac_dev/force-app/main/default/objects/Resubmission_to_Credit_Details__c/fields/Field_Values_at_Resub_Render_Decision__c.field-meta.xml
<CustomField>
    <fullName>Field_Values_at_Resub_Render_Decision__c</fullName>
    <description>Field Values at time of resub render decision.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Field Values at time of resub render decision.</inlineHelpText>
    <label>Field Values at Resub Render Decision</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>