peac_dev/force-app/main/default/objects/Resubmission_to_Credit_Details__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Resubmission to Credit Details</relationshipLabel>
    <relationshipName>Resubmission_to_Credit_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>