peac_dev/force-app/main/default/objects/Resubmission_to_Credit_Details__c/fields/Opportunity_Link__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Link__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Opportunity Link</label>
    <type>Url</type>
</CustomField>