peac_dev/force-app/main/default/objects/Resubmission_to_Credit_Details__c/fields/Originally_Decisioned_By__c.field-meta.xml
<CustomField>
    <fullName>Originally_Decisioned_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>xxOriginally Decisioned By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Resubmission_to_Credit_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>