peac_dev/force-app/main/default/objects/Resubmission_to_Credit_Details__c/fields/Re_score_on_Resubmission__c.field-meta.xml
<CustomField>
    <fullName>Re_score_on_Resubmission__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SAL-2318</description>
    <inlineHelpText>Checking this box will cause the app to be re-scored</inlineHelpText>
    <label>Re-score on Resubmission</label>
    <type>Checkbox</type>
</CustomField>