peac_dev/force-app/main/default/objects/Resubmission_to_Credit_Details__c/fields/Render_Decision_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Render_Decision_Date_Time__c</fullName>
    <description>Date/Time when Render Decision is selected.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date/Time when Render Decision is selected.</inlineHelpText>
    <label>Resub Render Decision Date/Time</label>
    <type>DateTime</type>
</CustomField>