peac_dev/force-app/main/default/objects/Resubmission_to_Credit_Details__c/fields/Resubmission_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Resubmission_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Resubmission Date/Time</label>
    <type>DateTime</type>
</CustomField>