peac_dev/force-app/main/default/objects/Resubmission_to_Credit_Details__c/fields/Resubmission_decision_change__c.field-meta.xml
<CustomField>
    <fullName>Resubmission_decision_change__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Field Values at Resubmission</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>