peac_dev/force-app/main/default/objects/Resubmission_to_Credit_Details__c/fields/Resubmission_decision_notes__c.field-meta.xml
<CustomField>
    <fullName>Resubmission_decision_notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Resubmission decision notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>