peac_dev/force-app/main/default/objects/Resubmission_to_Credit_Details__c/fields/Resubmission_decision_notes_Text_Area__c.field-meta.xml
<CustomField>
    <fullName>Resubmission_decision_notes_Text_Area__c</fullName>
    <description>Changed the text to long text and increased characters limit to 10000-SAL-6133</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Resubmit to Credit Comments</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>