peac_dev/force-app/main/default/objects/Resubmission_to_Credit_Details__c/fields/Resubmission_Type_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Resubmission_Type_Picklist__c</fullName>
    <label>Resubmission Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appeal Approval – Conditions</fullName>
            </value>
            <value>
                <fullName>Appeal Approval – Program</fullName>
            </value>
            <value>
                <fullName>Appeal – Incorrect Information Pulled</fullName>
            </value>
            <value>
                <fullName>Change Request – Terms</fullName>
            </value>
            <value>
                <fullName>Change Request – Equipment Cost</fullName>
            </value>
            <value>
                <fullName>Clear Stip(s)</fullName>
            </value>
            <value>
                <fullName>Waive Stip(s)</fullName>
            </value>
            <value>
                <fullName>Appeal Decision</fullName>
            </value>
            <value>
                <fullName>More Info</fullName>
            </value>
            <value>
                <fullName>Fraud Resubmission</fullName>
            </value>
            <value>
                <fullName>Change Ownership Information</fullName>
            </value>
            <value>
                <fullName>Change Business Location</fullName>
            </value>
            <value>
                <fullName>Time in Business</fullName>
            </value>
            <value>
                <fullName>Competitor Balance</fullName>
            </value>
            <value>
                <fullName>Incorrect Industry</fullName>
            </value>
            <value>
                <fullName>Appeal - Term</fullName>
            </value>
            <value>
                <fullName>Appeal - Amount</fullName>
            </value>
            <value>
                <fullName>Appeal - Waive Stip(s)</fullName>
            </value>
            <value>
                <fullName>Appeal - Industry Exception</fullName>
            </value>
            <value>
                <fullName>Fraud - Clear Stip(s)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>