peac_dev/force-app/main/default/objects/Resubmission_to_Credit_Details__c/fields/Resubmit_to_Credit_Submitter__c.field-meta.xml
<CustomField>
    <fullName>Resubmit_to_Credit_Submitter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resubmit to Credit Submitter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Resubmission_to_Credit_Details2</relationshipName>
    <type>Lookup</type>
</CustomField>