peac_dev/force-app/main/default/objects/Resubmission_to_Credit_Details__c/fields/Sent_to_Web__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Web__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent to Web</label>
    <type>Checkbox</type>
</CustomField>