peac_dev/force-app/main/default/objects/Resubmission_to_Credit_Details__c/fields/Type_of_Appeal__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Appeal__c</fullName>
    <label>Type of Appeal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appeal Decision</fullName>
            </value>
            <value>
                <fullName>Appeal Program</fullName>
            </value>
            <value>
                <fullName>Appeal Terms/Conditions</fullName>
            </value>
            <value>
                <fullName>Bank Data Exception</fullName>
            </value>
            <value>
                <fullName>Doc Exception</fullName>
            </value>
            <value>
                <fullName>Line Increase</fullName>
            </value>
            <value>
                <fullName>Term Increase</fullName>
            </value>
            <value>
                <fullName>Evaluate Auto Decline</fullName>
            </value>
            <value>
                <fullName>Evaluate Manual Decline</fullName>
            </value>
            <value>
                <fullName>Payment Frequency</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Funding Doc Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>