peac_dev/force-app/main/default/objects/Resubmission_to_Credit_Details__c/fields/Underwriter_Comments__c.field-meta.xml
<CustomField>
    <fullName>Underwriter_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Underwriter Comments</label>
    <type>TextArea</type>
</CustomField>