peac_dev/force-app/main/default/objects/Resubmission_to_Credit_Details__c/fields/Underwriter_Decision__c.field-meta.xml
<CustomField>
    <fullName>Underwriter_Decision__c</fullName>
    <label>Underwriter Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>