peac_dev/force-app/main/default/objects/Resubmission_to_Credit_Details__c/recordTypes/Lease.recordType-meta.xml
<RecordType>
    <fullName>Lease</fullName>
    <active>true</active>
    <description>Use For Lease App</description>
    <label>Lease</label>
</RecordType>