peac_dev/force-app/main/default/objects/Resubmission_to_Credit_Details__c/recordTypes/Loan.recordType-meta.xml
<RecordType>
    <fullName>Loan</fullName>
    <active>true</active>
    <description>For Loan App</description>
    <label>Loan</label>
</RecordType>