peac_dev/force-app/main/default/objects/Resubmission_to_Credit_Details__c/validationRules/Override_Auto_More_Info.validationRule-meta.xml
<ValidationRule>
    <fullName>Override_Auto_More_Info</fullName>
    <active>true</active>
    <description>Validation rule to make sure Auto More Info Override checkbox is checked when resubmitting certain applications. Specified in SAL-2494</description>
    <errorConditionFormula>AND(
ISPICKVAL(Opportunity__r.Application_Status__c, &apos;Returned to Submitter&apos;), ISPICKVAL( Resubmission_Type_Picklist__c, &apos;Appeal Decision&apos;), INCLUDES(Appeal_Information_Provided__c , &apos;Original Credit Data&apos;), OR(ISPICKVAL(Appeal_Type__c, &apos;1st&apos;) ,ISPICKVAL(Appeal_Type__c, &apos;2nd&apos;)),
NOT(Opportunity__r.Auto_More_Info_Override__c) 
)</errorConditionFormula>
    <errorMessage>The Auto More Info Override checkbox is required to resubmit this application.</errorMessage>
</ValidationRule>