peac_dev/force-app/main/default/objects/Resubmission_to_Credit_Details__c/validationRules/Restrict_Exception_Edit_On_Approved_Apps.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Exception_Edit_On_Approved_Apps</fullName>
    <active>true</active>
    <description>Exceptions cannot be edited on approved application. When not  approved , only Credit users may edit this field.</description>
    <errorConditionFormula>AND( 
      NOT($Permission.Bypass_Validation),
      ISCHANGED(Exception__c),
      RecordType.Name = &apos;Loan&apos;,


      OR(
          CONTAINS(TEXT(Opportunity__r.Application_Status__c), &apos;Approved&apos;),
        
          AND( 
              NOT(CONTAINS(TEXT(Opportunity__r.Application_Status__c),&apos;Approved&apos;)),
              NOT(CONTAINS($Profile.Name, &apos;Credit&apos;))
              ) 
      )

)</errorConditionFormula>
    <errorMessage>Exceptions cannot be edited on approved application. When not  approved , only Credit users may edit this field.</errorMessage>
</ValidationRule>