peac_dev/force-app/main/default/objects/Resubmission_to_Credit_Details__c/validationRules/Resubmission_Type_contains_Appeal.validationRule-meta.xml
<ValidationRule>
    <fullName>Resubmission_Type_contains_Appeal</fullName>
    <active>true</active>
    <errorConditionFormula>AND(CONTAINS(TEXT(Resubmission_Type_Picklist__c), &apos;Appeal&apos;), ISBLANK(TEXT(Appeal_Type__c)))</errorConditionFormula>
    <errorDisplayField>Appeal_Type__c</errorDisplayField>
    <errorMessage>Please select appeal level</errorMessage>
</ValidationRule>