peac_dev/force-app/main/default/objects/Resubmission_to_Credit_Details__c/listViews/Appeal_Resubmission.listView-meta.xml
<ListView>
    <fullName>Appeal_Resubmission</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Resubmission_Type_Picklist__c</columns>
    <columns>Appeal_Type__c</columns>
    <columns>Type_of_Appeal__c</columns>
    <columns>Appeal_Comments__c</columns>
    <columns>Appeal_Information_Provided__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Assigned_Credit_User__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Resubmission_to_Credit_Details__c.Loan</value>
    </filters>
    <filters>
        <field>Appeal_Type__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Underwriter_Decision__c</field>
        <operation>equals</operation>
    </filters>
    <label>Appeal Resubmission</label>
</ListView>